<resources>
    <string name="app_name">Money Bank</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="subHeading">Your money manager</string>
    <string name="name">Name:</string>
    <string name="currency">Currency: e.g INRS</string>
    <string name="nonEmpty">This field cannot be empty</string>
    <string name="check">Please check your input</string>
    <string name="salary">Do you have a monthly salary?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bills">Bills you pay monthly? e.g House rent</string>
    <string name="confirm">confirm</string>
    <string name="success">Success</string>
    <string name="fail">Failed to process</string>
    <string name="salarySelection">Select Your Salary Day And Amount</string>
    <string name="amount">Amount</string>
    <string name="billSelection">Select Your Bill Day And Amount</string>
    <string name="complete">complete</string>
    <string name="balance">Balance</string>
    <string name="cards">Cards</string>
    <string name="cash">Cash</string>
    <string name="history">History</string>
    <string name="currentDate">Current date</string>
    <string name="or">or</string>
    <string name="enteramount">Enter the amount</string>
    <string name="deposit">deposit</string>
    <string name="withdraw">withdraw</string>
    <string name="deposited">deposited</string>
    <string name="withdrawed">withdrawed</string>
    <string name="add">Add a new card</string>
    <string name="nocards">No cards avaialable - Add a new card</string>
    <string name="insufficient">Insufficient funds</string>
    <string name="cashsmall">cash</string>
    <string name="cardname">Card Name</string>
    <string name="cardnumber">Card Number(optional)</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="balancecard">Card Balance</string>
    <string name="help">Ads to support OpenSource</string>
    <string name="banner_ad_unit_id">ADD YOURS HERE</string>
    <string name="na">NA</string>
    <string name="invalid">There may be a card in the database with the same name. Please change it</string>
    <string name="select">Select a card</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_history">Mini Statement</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cashstatement">Mini Statement - Cash</string>
    <string name="cardstatement">Mini Statement - Cards</string>
    <string name="others">Others</string>
    <string name="events">Events</string>
    <string name="addevent">Add event</string>
    <string name="eventamount">Event amount</string>
    <string name="eventname">Event name</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete">Delete a card</string>
    <string name="del">Delete</string>
    <string name="salrynotify">Have you recived your salary? Amount: </string>
    <string name="billnotify">Have you paid your bill? Amount: </string>
    <string name="please">Please update</string>
</resources>
